# mcgen

./: .gitignore  CMakeLists.txt  SUMMARY.md  build-arm.sh  build.sh  fix-permissions.sh  install-deps.sh  quickstart-ubuntu.sh  vcpkg.json
.github/workflows/: ci.yml  nightly.yml  release.yml
cmake/: arm64-toolchain.cmake
docs/: leveldb-install-guide.md  leveldb-status-report.md
scripts/: build-leveldb-mcpe.sh  check-leveldb.sh  verify.sh
src/: main.cpp
src/bedrock/leveldb/: bedrock_leveldb.cpp  bedrock_leveldb.hpp
src/bedrock/world/: bedrock_world_writer.cpp  bedrock_world_writer.hpp
src/config/: cli_parser.cpp  cli_parser.hpp  world_config.cpp  world_config.hpp
src/core/: cave_system.cpp  cave_system.hpp  noise.cpp  noise.hpp  ore_veins.cpp  ore_veins.hpp  structures.cpp  structures.hpp  terrain_engine.cpp  terrain_engine.hpp  thread_pool.cpp  thread_pool.hpp
src/java/anvil/: region_writer.cpp  region_writer.hpp
src/java/nbt/: nbt_codec.cpp  nbt_codec.hpp
src/java/world/: java_world_writer.cpp  java_world_writer.hpp
src/shared/: chunk_data.cpp  chunk_data.hpp  endian.cpp  endian.hpp  gzip_utils.cpp  gzip_utils.hpp
src/shared/mappings/: block_mapping.cpp  block_mapping.hpp
tests/: CMakeLists.txt  test_chunk_data.cpp  test_endian.cpp  test_mappings.cpp  test_nbt.cpp  test_noise.cpp  test_terrain.cpp
